[project]
name = "flask-core-backend"
version = "0.0.1"
description = "A flask-cors Server for ICA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.9",
    "blinker>=1.9.0",
    "uvicorn>=0.34.0",
    "colorama>=0.4.6",
    "jinja2>=3.1.5",
    "Flask>=3.1.2",
    "flask-cors>=6.0.1",
    "click>=8.3.0",
	"MarkupSafe>=3.0.3",
    "Werkzeug>=3.1.3",
    "pip>=25.1.1",
    "itsdangerous>=2.2.0",
]
